--- a/src/App.less
+++ b/src/App.less
@@ -24,6 +24,7 @@
     .header {
         display: flex;
         justify-content: space-evenly;
+        flex-wrap: wrap;
         align-items: center;
         font-size: 1.5rem;
         font-weight: bold;
