--- a/src/Button.less
+++ b/src/Button.less
@@ -2,6 +2,7 @@
     text-align: center;
     vertical-align: middle;
     padding: 1rem;
+    margin: 0.5rem;
     &.rounded {
         border-radius: 1rem;
         border: 1px solid grey;
