--- a/src/App.less
+++ b/src/App.less
@@ -6,6 +6,7 @@
 }
 
 @bg-color: red;
+@import './GeneralSetting.less';
 
 #app {
     background: #f7f5f5;
@@ -20,6 +21,63 @@
             height: 10%;
             margin-right: 5%;
         }
+
+        .menu-select-icon {
+            display: none;
+        }
+
+        @media only screen and (max-width: @ipad-pro-width) {
+            .menu-select-icon {
+                display: flex;
+                align-items: center;
+                flex-wrap: wrap;
+                justify-content: center;
+                position: absolute;
+                right: 2%;
+                width: 10%;
+                cursor: pointer;
+                padding: 1px;
+                .bar1, .bar2, .bar3 {
+                    width: 100px;
+                    height: 5px;
+                    background-color: #333;
+                    margin: 6px 0;
+                    transition: 0.4s;
+                }
+
+                &:hover {
+                    .bar1, .bar2, .bar3 {
+                        transform: scale(1.1);
+                        opacity: 0.8;
+                    }
+                }
+
+                &.activate {
+                    .bar1 {
+                        transform: rotate(-45deg) translate(-9px, 16px);
+                    }
+                      
+                    .bar2 {
+                        opacity: 0;
+                    }
+                      
+                    .bar3 {
+                        transform: rotate(45deg) translate(-8px, -15px);
+                    }
+                }
+            }
+        }
+
+        @media only screen and (max-width: @ipad-width) {
+            img {
+                width: 20%;
+            }
+            font-size: 3rem;
+        }
+
+        @media only screen and (max-width: @iphone-x-width) {
+            font-size: 2rem;
+        }
     }
     .header {
         display: flex;
@@ -30,10 +88,48 @@
         font-weight: bold;
         .item {
             list-style-type: none;
+            cursor: pointer;
+
+            &:hover {
+                opacity: 0.5;
+            }
+        }
+
+        @media (max-width: @ipad-pro-width) {
+            position: absolute;
+            transform: scale(1);
+            transition: transform 150ms ease-out;
+            transform-origin: top right;
+            width: 100%;
+            background: white;
+            z-index: 1;
+
+            &.hidden {
+                transform: scale(0.0);
+                animation: transform 150ms ease-in-out, fade 150ms ease-out;
+            }
+
+            @keyframes fade {
+                0%   { opacity: 1; }
+                100% { opacity: 0; }
+            }
+
+            .item {
+                width: 100%;
+                left: 50%;
+                text-align: center;
+                border-left: @border-width solid @border-color;
+                border-right: @border-width solid @border-color;
+                border-bottom: @border-width solid @border-color;
+                &:first-child {
+                    border-top: @border-width solid @border-color;
+                }
+            }
         }
     }
     .background-image {
         width: 100vw;
+        max-width: 100%;
         position: relative;
         img {
             width: 100%;
